Merge query and search interface